media/css/plugins/960gd/ie7.css
#submit_button_right{
    height:50px !important;
}
#submit-button{
    padding:0px !important;
}

.mobile #sms_preview{
    margin-left:25px;
    margin-top:145px;
    overflow:hidden;
}
.mobile #id_message{
    width:84px;
    height:64px;
    margin-left: 20px;
    overflow:hidden;
}
.add_subject_form ul li{
        float:none;
}
.errorlist{
    padding:0 !important;
    background-position:4px 7px !important;
}
#questionnaire_preview  .multiple_select{
    margin-left:25px !important;
}

.questionnaire_title li{
        width:700px;
        float:left;
}

#questionnaire_preview .questionnaire_title li{
    width: 500px;
}

.sms_tester_form td{
    width: 500px !important;
}

#que_code li{
     clear: both;
    }

#question_form .que_list li{
    margin-left: 13px;
}

#question_form #questions-panel .que_num li {
    margin-left: 23px;
}

.container_24 .grid_23 .data_ana{
    clear: both;
}

.que_width li{
    width: 900px;
}

.que_width li .errorlist li{
    width: auto;
    max-width: 300px;
}

.que_width li .answer li {
    width: auto;
}

.question_list ol li { margin-top: -3px !important; }
.question_list ol li a { margin-left: 5px; }

div.error_arrow
{
    background: url(/media/images/arrow_error.png) no-repeat left 5px !important;
}
span.error_arrow,#questionnaire-code-error, label.error_arrow{
    background: url(/media/images/arrow_error.png) no-repeat left 5px !important;
}

.ui-widget-content .ui-widget-header {
    background: #3d3d3d;
}

#questionnaire-code{
    vertical-align: middle;
}

#data_analysis_length select{
        vertical-align:middle;
}

#data_analysis_filter input{
        vertical-align:middle;
}

#project_profile fieldset legend {
    margin-left: -8px;
}

#add_subject_type h3{
    width: 477px;
}

#add_subject_type div{
    width: 415px;
}

.example{
    clear: both;
    margin-top: -20px;
}

#type_message{
    width: 300px !important;
}

.create_proj_button a{
    line-height: 45px;
}

.all_projects{
    margin-top: -20px;
}

.payment_details > li > div > ul {
    margin-left: 0px !important;
}

#project_profile > ul > li > .summary_report{
    margin-top:-10em;
}

#project_profile > ul > li > .individual_report{
    margin-top:-7.3em;
    margin-left:115px;
}

.summary_report{
    margin-top:-85px !important;
    margin-left:-70px;
}

.summary_report_tooltip{
    left:310px !important;
    top:930px !important;
}

.individual_report{
    margin-top:-50px !important;
    margin-left:60px !important;
}

.individual_report_tooltip{
    left:440px !important;
    top:967px !important;
}

.subject_tooltip_img{
    margin-left:-75px;
    margin-top: -10px;
}

.subject_tooltip_img_main{
    margin-left:0px !important;
    margin-top: -10px;
}

.subject_tooltip{
    margin-left: -0px;
    margin-top: -50px;
}
#questionnaire_preview li{
    width:500px;
}

